--- a/biology/css/style.css
+++ b/biology/css/style.css
@@ -1,13 +1,13 @@
 html, body {
-  height: 100%;
-  width: 100%;
-  background: url("../../imgs/doubleHelixbckgrnd.jpg") no-repeat center center fixed;
-  background-size: cover;
+  margin: 0;
+  background: url("http://digitalresult.com/wp-content/uploads/2016/03/monochrome-forest-mountains-scenery-16.jpeg") no-repeat fixed center;
+  background-image: radial-gradient(top, circle cover,  hsla(205, 95%, 15%, 1) 0%, hsla(251, 20%, 17%,1) 80%);
+  overflow: hidden;
 }
 
 /*Navigation Bar*/
 .navbar {
-  background: rgba(0,255,191,0.5);
+  background: rgba(0,191,255, 0.5);
   color: black;
 }
 .navbar .navbar-header > span.name {
@@ -25,7 +25,7 @@ html, body {
 
 
 /*Background*/
-/*.helix {
+.helix {
   margin: 40vh -15%;
   width: 200%;
   height: 40vh;
@@ -46,7 +46,7 @@ html, body {
   height: 30vh;
   box-shadow: 1px 1px 1px 1px hsla(0,0%,0%,0.2);
   background:hsla(243, 100%, 85%, 1);
-  animation: rot 5s linear infinite,
+  animation: rot 5s linear infinite, 
              chngCol 5s linear alternate infinite;
   transition:all 1s ease;
   z-index: -1;
@@ -78,40 +78,28 @@ html, body {
   to {
     background: hsla(253, 85%, 25%, 1);
   }
-}*/
+}
 
 /*Main Information*/
 #biology {
-  margin-top: 50px;
-  maring-left: 25px;
+  margin: 30px;
+  position: absolute;
+  top: 50px;
 }
 .header {
-  color: rgb(255, 255, 255);
+  color: rgba(255, 174, 0, 0.8);
   font: 10em 'Lobster', cursive;
-  margin-right: 50%;
+  text-align: right;
 }
 .subheader {
   color: rgb(255, 255, 255);
   font: 700 2em "Playfair Display", serif;
-  margin-right: 50%;
+  margin-left: 50%;
   word-spacing: 5px;
+  text-align: right;
 }
 hr.divider {
-  border: 1px outset rgba(255,255,255,0.6);
+  border: 1px outset rgba(0, 255, 192, 0.6);
+  box-shadow: 1px 1px 1px rgba(255, 0, 63, 1);
   width: 80vw;
-}
-#bioPaper{
-  background: rgba(150,150,150,0.75);
-  position: relative;
-  margin-left: 25px;
-  margin-right: 28%;
-}
-#bioPaper > h2 {
-  text-align: center;
-  font: 700 3em "Lobster", cursive;
-  color: rgb(255,255,255);
-}
-#bioPaper > p {
-  font: 700 2em "Playfair Display", serif;
-  color: whitesmoke;
 }
